[gd_scene load_steps=3 format=3 uid="uid://dombka54ituut"]

[ext_resource type="Script" uid="uid://bd73fgawt1pjm" path="res://ui/ControlsHintMenu.gd" id="1"]

[sub_resource type="Theme" id="Theme1"]

[node name="ControlsHintMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.92)
custom_minimum_size = Vector2(1024, 640)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -240.0
offset_right = 380.0
offset_bottom = 240.0
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "USE AS SETAS PARA SE MOVER"
horizontal_alignment = 1

[node name="Arrows" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ArrowLeft" type="Label" parent="Panel/VBoxContainer/Arrows"]
modulate = Color(1, 1, 1, 0.35)
layout_mode = 2
theme_override_font_sizes/font_size = 112
text = "←"

[node name="ArrowUp" type="Label" parent="Panel/VBoxContainer/Arrows"]
modulate = Color(1, 1, 1, 0.35)
layout_mode = 2
theme_override_font_sizes/font_size = 112
text = "↑"

[node name="ArrowDown" type="Label" parent="Panel/VBoxContainer/Arrows"]
modulate = Color(1, 1, 1, 0.35)
layout_mode = 2
theme_override_font_sizes/font_size = 112
text = "↓"

[node name="ArrowRight" type="Label" parent="Panel/VBoxContainer/Arrows"]
modulate = Color(1, 1, 1, 0.35)
layout_mode = 2
theme_override_font_sizes/font_size = 112
text = "→"

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(260, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "VOLTAR AO MENU"

[node name="StartButton" type="Button" parent="Panel/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(260, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "INICIAR FASE"
